@@ -168,9 +168,7 @@ for NTP messages, in seconds to the power of two. The maximum poll
 interval defaults to 10 (1,024 s), but can be increased by the <tt>
 maxpoll</tt> option to an upper limit of 17 (36.4 h). The minimum
 poll interval defaults to 6 (64 s), but can be decreased by the
-<tt>minpoll</tt> option to a lower limit set by the <tt>tinker
-minpoll</tt> command. The limit set by this command defaults to 6
-(64 s), but can be decreased to a lower limit of 4 (16s).</dd>
+<tt>minpoll</tt> option to a lower limit of 4 (16 s).</dd>
 
 <dt><tt>prefer</tt></dt>
 
